# sra

./: .env  .gitignore  Docker-compose.yaml  Dockerfile  Dockerfile.app  README.md  docker-compose.yml  et --hard c1dc422  launch.json  package-lock.json  pom.xml  readme.md  requirements.md  test.py
.github/worfkflow/: build.yml  release.yml
.github/workflows/: update_version.yml
backend/: Dockerfile.app  Dockerfile.postgres  HowToRun.md  init.sql  pom.xml
captcha-service/: Dockerfile  server.py
frontend/: Dockerfile  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  privateTest.json  publicTest.json  vue.config.js
frontend/src/: main.js  router.js
frontend/src/components/: LoginForm.vue  MailVerify.vue  RegisterForm.vue  TwoFactor.vue  UserDashboard.vue
frontend/src/review/: MainPage.vue  PhoneCard.vue  PhoneDetails.vue  ReviewList.vue
frontend/src/review/data/: usePhones.js
frontend/src/views/: AdminActionsPanel.vue  UserPage.vue  UserProfile.vue
ml-service/: .google-cookie  .pre-commit-config.yaml  Dockerfile  api.py  bandit.yaml  build_run.sh  commands.txt  gitsc.sh  main.py  processors.py  pyproject.toml  requirements.txt  trusted_sources.json
ml-service/bandit_plugins/: print_secret.py  ssl_false_aiohttp.py
ml-service/bandit_plugins_sra.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
monitoring/: alert.rules.yml  alertmanager.yml  blackbox.yml  process-exporter.yml  prometheus.yml
nginx/: Dockerfile  nginx-grafana.conf
src/: App.vue  router.js
src/components/: LoginForm.vue  RegisterForm.vue
(+94 files in other folders)
